--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="https://cdn-icons.flaticon.com/png/512/2118/premium/2118630.png?token=exp=1643468054~hmac=4041bfaa65aa973c9a4284ebb805ef3f" alt="dhana-profile" class=profile-img>
+        <img src="profiledhana.png" alt="dhana-profile" class=profile-img>
         <h2>Hello.</h2>
         <p class="about">I am Software Engineer exploring Technology😍...</p>
       </div>
